remove Package Actions on card, fix too much space

--- a/services/ui-src/src/index.scss
+++ b/services/ui-src/src/index.scss
@@ -489,7 +489,7 @@ input[type="file"] {
 
   h2 {
     @extend .ds-h3;
-    @extend .ds-u-margin-top--7;
+    @extend .ds-u-margin-top--1;
   }
   .topic-title {
     @extend .ds-h3;
